--- a/cv.tex
+++ b/cv.tex
@@ -11,18 +11,18 @@
 
 \firstname{Philippe}
 \familyname{Inthavong}
-\title{Ing\'{e}nieur Java JEE}              
+\title{D\'{e}veloppeur Full Stack}              
 \address{21 rue Jean Baptiste Cl\'{e}ment}{94800 Villejuif}    
 \email{philippe.inthavong@gmail.com}                      
 %\homepage{www.madrzejewski.com}
-\mobile{06 89 95 84 68} 
-\extrainfo{26 ans -- Permis B}
+\mobile{07 69 03 77 07} 
+\extrainfo{28 ans -- Permis B}
 \begin{document}
 \maketitle
 
 \section{Exp\'{e}riences}
 
-\cventry{Septembre 2015\\à Aujourd'hui}{D\'eveloppeur Java JEE}{Sopra Steria (client: Caisse nationale de l'assurance maladie des travailleurs salari\'{e}s)}{}{Paris}{
+\cventry{Septembre 2015\\à Janvier 2018}{D\'eveloppeur Java JEE}{Sopra Steria (client: Caisse nationale de l'assurance maladie des travailleurs salari\'{e}s)}{}{Paris}{
 \begin{itemize}
 	\item Rédaction de spécifications techniques
 	\item Conception applicative
@@ -50,7 +50,7 @@
 	\cventry{2009 -- 2011}{Classe pr\'{e}paratoire aux grandes \'{e}coles}{Lyc\'{e}e Paul Val\'{e}ry (Paris)}{}{Sp\'{e}cialit\'{e} Math\'{e}matiques, Physiques}{}
 	\cventry{2009}{Etudes secondaires}{Lyc\'{e}e EPIN (94)}{}{Baccalaur\'{e}at Scientifique, mention Bien}{}
 
-	\section{Comp\'{e}tences en informatique}
+	\section{Comp\'{e}tences}
 	\cvitem{Langages}{Java, Javascript, HTML, CSS, SQL, Bash, C/C++, Python}
 	\cvitem{Base de donn\'{e}es}{Oracle, ProgresSQL, MySQL, MongoDB}
 	\cvitem{Serveurs}{Apache Tomcat, JBoss Application Server, Oracle Weblogic Server 11g}
@@ -60,7 +60,7 @@
 	\section{Langues}
 	\cvlanguage{Anglais}{lu, \'{e}crit, parl\'{e} -- Toeic 900}{}
 	\cvlanguage{Allemand}{Scolaire}{}
-	\cvlanguage{Japonais}{Débutant}{}
+	\cvlanguage{Corréen}{Débutant}{}
 
 	\section{Centres d'int\'{e}r\^et}
 	\cvitem{Culture}{Photographie, Cin\'{e}ma (science-fiction), Voyages}
