--- a/cv.tex
+++ b/cv.tex
@@ -11,7 +11,7 @@
 
 \firstname{Philippe}
 \familyname{Inthavong}
-\title{D\'{e}veloppeur Full Stack}              
+\title{D\'{e}veloppeur Full Stack - 5 ann\'{e}e d'exp\'{e}rience}              
 \address{21 rue Jean Baptiste Cl\'{e}ment}{94800 Villejuif}    
 \email{philippe.inthavong@gmail.com}                      
 %\homepage{www.madrzejewski.com}
