--- a/cv.tex
+++ b/cv.tex
@@ -11,7 +11,7 @@
 
 \firstname{Philippe}
 \familyname{Inthavong}
-\title{D\'{e}veloppeur Full Stack - 5 ann\'{e}e d'exp\'{e}rience}              
+\title{D\'{e}veloppeur Full Stack \newline\newline 5 ann\'{e}es d'exp\'{e}rience} 
 \address{21 rue Jean Baptiste Cl\'{e}ment}{94800 Villejuif}    
 \email{philippe.inthavong@gmail.com}                      
 %\homepage{www.madrzejewski.com}
@@ -21,21 +21,34 @@
 \maketitle
 
 \section{Exp\'{e}riences}
-
-\cventry{Septembre 2015\\à Janvier 2018}{D\'eveloppeur Java JEE}{Sopra Steria (client: Caisse nationale de l'assurance maladie des travailleurs salari\'{e}s)}{}{Paris}{
+\cventry{Février 2018\\à Décembre 2019}{D\'eveloppeur Full Stack}{SII Canada}{Volontariat en Entreprise (V.I.E)}{Montr\'{e}al, Canada}{
 \begin{itemize}
-	\item Rédaction de spécifications techniques
-	\item Conception applicative
-	\item Développement et tests
-	\item Rédaction de documents techniques
-	\item Encadrement technique
-	\end{itemize}}
+	\item \emph{Pour le compte de la Banque Nationale du Canada}
+		\begin{itemize}
+			\item Développement de formulaires pour les transactions d'échange de fond d'investissement
+			\item Développement API Webs
+			\item Technologies: React, Javascript, Redux, Java 11, Openshift, Jenkins, Postman
+		\end{itemize}
+	\item \emph{Pour le compte de Desjardins (secteur bancaire)}
+		\begin{itemize}
+			\item Développement d'API REST pour la gestions de comptes commer\c{c}ants
+			\item Maintenance d'applications legacy
+			\item Technologies: Java 8, Spring, Mockito, SoapUI, Jenkins
+		\end{itemize}
+\end{itemize}}
 
-	\cventry{Juin 2015\\à Septembre 2015}{D\'eveloppeur}{Sopra Steria (client: Assistance Publique des Hôpitaux de Paris)}{}{Paris}{Maintenance corrective et \'{e}volutive de l'outil de gestion du r\'{e}f\'{e}rentiel des structures de l'AP-HP.
-	\begin{itemize}
-	\item Conception et développement de lots évolutifs
-	\item Organisation de la réversibilité du projet pour les équipes clientes
-	\end{itemize}}
+\cventry{Septembre 2015\\à Janvier 2018}{D\'eveloppeur Java JEE}{Sopra Steria}{}{Paris}{
+\begin{itemize}
+	\item \emph{Pour le compte de la Caisse nationale de l'assurance maladie des travailleurs salari\'{e}s}
+		\begin{itemize}
+			\item Rédaction de spécifications techniques
+			\item Technologies : Java EE, Spring-Batch, Scripting Bash, Spring, Hibernate, Toplink, RedHat 
+		\end{itemize}
+	\item \emph{Pour le compte de l'Assistance Publique des Hôpitaux de Paris}
+		\begin{itemize}
+			\item Maintenance corrective et \'{e}volutive de l'outil de gestion du r\'{e}f\'{e}rentiel des structures de l'AP-HP
+		\end{itemize}
+\end{itemize}}
 
 	\cventry{Mars 2014\\à Septembre 2014}{Ingénieur R\&D }{Laboratoire d’ing\'{e}nierie du Mouvement}{Montr\'{e}al}{\newline{} \textit{Développement d'un outil opto-electronique anthropométrique}}
 	{Développement d'un outil de mesure à bas coût basé sur les caméras Kinect pour la prise de mesures anthropométriques (volume et masse) du corps humain.\newline{}}
@@ -51,14 +64,13 @@
 	\cventry{2009}{Etudes secondaires}{Lyc\'{e}e EPIN (94)}{}{Baccalaur\'{e}at Scientifique, mention Bien}{}
 
 	\section{Comp\'{e}tences}
-	\cvitem{Langages}{Java, Javascript, HTML, CSS, SQL, Bash, C/C++, Python}
-	\cvitem{Base de donn\'{e}es}{Oracle, ProgresSQL, MySQL, MongoDB}
-	\cvitem{Serveurs}{Apache Tomcat, JBoss Application Server, Oracle Weblogic Server 11g}
-	\cvitem{Systèmes}{Windows 7, MacOS X, Linux (Ubuntu)}
-	\cvitem{Outils}{Eclipse, Ant, Maven, Jenkins, Sonar, Phabricator, Microsoft office}
+	\cvitem{Frontend}{ React, Javascript, ES6, HTML, CSS, Redux, Jest}
+	\cvitem{Backend}{Java, Node, Spring, ExpressJS, SQL, NoSQ }
+	\cvitem{Outils}{Jenkins, Docker, Maven, Git}
+	\cvitem{Méthodologies}{Agile (SCRUM), Test Driven Developpement}
 
 	\section{Langues}
-	\cvlanguage{Anglais}{lu, \'{e}crit, parl\'{e} -- Toeic 900}{}
+	\cvlanguage{Anglais}{Avancé}{}
 	\cvlanguage{Allemand}{Scolaire}{}
 	\cvlanguage{Corréen}{Débutant}{}
 
