--- a/cv_en.tex
+++ b/cv_en.tex
@@ -12,7 +12,7 @@
 \firstname{Philippe}
 \familyname{Inthavong}
 \title{Full Stack Developer} 
-\address{303ho 794-8 Yeoksam-dong}{Gangnam-gu, Seoul, South Korea}    
+\address{794-8 Yeoksam-dong}{Gangnam-gu, Seoul, South Korea}    
 \email{philippe.inthavong@gmail.com}                      
 %\homepage{www.madrzejewski.com}
 \mobile{010-5532-9551} 
@@ -71,8 +71,8 @@ A full stack developer with \textbf{5 years of experience} building end-to-end w
 	\cventry{2009}{High school}{Lyc\'{e}e EPIN}{France}{Major in Science with honor}{}
 
 	\section{Technical Skills}
-	\cvitem{Frontend}{ React, Javascript, ES6, HTML, CSS, Redux, Jest}
-	\cvitem{Backend}{Java, Node, Spring, ExpressJS, SQL, NoSQL}
+	\cvitem{Front-end}{ React, Javascript, ES6, HTML, CSS, Redux, Jest}
+	\cvitem{Back-end}{Java, Node, Spring, ExpressJS, SQL, NoSQL}
 	\cvitem{Tools}{Jenkins, Docker, Maven, Git}
 	\cvitem{Methodolody}{Agile (SCRUM), Test Driven Developpement}
 
